--- a/DatasetCreation.ipynb
+++ b/DatasetCreation.ipynb
@@ -2,29 +2,29 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f1bb9312",
+   "id": "b799ef4a",
    "metadata": {},
    "source": [
-    "# Dataset Creation with Web Scraping "
+    "# Dataset Creation using Web Scraping & Cleaning Techniques"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5db089b5",
+   "id": "3e75da21",
    "metadata": {},
    "source": [
-    "Typeform is an online SAAS company for web form and survey creation. OSMI has utilized this software for its surveys from the year 2016. On the publicly available survey webpage, all the questions asked are followed by a distribution of the responses. We scrape data about the questions for the creation of a CSV file for each year's survey. To scrape the questions of its online surveys, we use the ```requests``` and ```BeautifulSoup``` libraries. In order to acquire the responses of each participant\n",
+    "Typeform is an online SAAS company for web form and survey creation. OSMI has utilized this software for its surveys from the year 2016. On the publicly available survey webpage, all the questions asked are followed by a distribution of the responses. We scrape data about the questions for the creation of a CSV file for each year's survey. To scrape the questions of its online surveys, we use the ```requests``` and ```BeautifulSoup``` libraries. In order to acquire the responses of each participant, we use \n",
     "\n",
     "**Data Sources:**\n",
     "1. [OSMI 2016 Survey]()\n",
     "2. [OSMI 2017 Survey]()\n",
-    "3. [OSMI 2018 Survey](https://osmi.typeform.com/report/xztgPT/NFu2PHjwsMUkkL3h) and corresponding [Kaggle Dataset](https://www.kaggle.com/osmihelp/osmi-mental-health-in-tech-survey-2018)\n",
+    "3. [OSMI 2018 Survey](https://osmi.typeform.com/report/xztgPT/NFu2PHjwsMUkkL3h) and the corresponding [Kaggle Dataset](https://www.kaggle.com/osmihelp/osmi-mental-health-in-tech-survey-2018)\n",
     "4. [OSMI 2020 Survey]()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "74337f6d",
+   "id": "dd6f8a91",
    "metadata": {},
    "source": [
     "## 01 OSMI 2018 Survey"
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 311,
-   "id": "223623d3",
+   "id": "2a020212",
    "metadata": {
     "scrolled": false
    },
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 312,
-   "id": "cac86ea6",
+   "id": "c1f184c2",
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 313,
-   "id": "52738d9b",
+   "id": "59fc4c6f",
    "metadata": {
     "scrolled": true
    },
@@ -219,7 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": 314,
-   "id": "93456b9f",
+   "id": "ba1601f2",
    "metadata": {
     "scrolled": true
    },
@@ -247,7 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": 315,
-   "id": "de0c9c85",
+   "id": "9333e14d",
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf7cded3",
+   "id": "eb73bb02",
    "metadata": {},
    "source": [
     "Since we look to aggregate columns from multiple datasets throughout the years, we merge the columns of descriptive questions to form a single column: `comments`. We also drop the first column representing the participant ID and a few other columns that are not relevant to our study."
@@ -334,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": 316,
-   "id": "25d4cf3f",
+   "id": "b55de2e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86e70eac",
+   "id": "c940bbf2",
    "metadata": {},
    "source": [
     "The columns with indices between 50 to 62, 63 to 75 and 76 to 88 correspond to, respectively,\n",
@@ -360,7 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": 317,
-   "id": "fa5ac435",
+   "id": "1f88460b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +403,7 @@
   {
    "cell_type": "code",
    "execution_count": 318,
-   "id": "a97e7858",
+   "id": "93abb619",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": 319,
-   "id": "afc0fe38",
+   "id": "c1176960",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,7 +428,7 @@
   {
    "cell_type": "code",
    "execution_count": 320,
-   "id": "64636e60",
+   "id": "c1d981f3",
    "metadata": {},
    "outputs": [
     {
