Cleaned Kaggle dataset

--- a/DatasetCreation.ipynb
+++ b/DatasetCreation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b799ef4a",
+   "id": "d543b406",
    "metadata": {},
    "source": [
     "# Dataset Creation using Web Scraping & Cleaning Techniques"
@@ -10,10 +10,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e75da21",
+   "id": "4b0723da",
    "metadata": {},
    "source": [
-    "Typeform is an online SAAS company for web form and survey creation. OSMI has utilized this software for its surveys from the year 2016. On the publicly available survey webpage, all the questions asked are followed by a distribution of the responses. We scrape data about the questions for the creation of a CSV file for each year's survey. To scrape the questions of its online surveys, we use the ```requests``` and ```BeautifulSoup``` libraries. In order to acquire the responses of each participant, we use \n",
+    "Typeform is an online SAAS company for web form and survey creation. OSMI has utilized this software for its surveys from the year 2016. On the publicly available survey webpage, all the questions asked are followed by a distribution of the responses. We scrape data about the questions for merging with the Kaggle dataset for each year's survey. To scrape the questions of its online surveys, we use the ```requests``` and ```BeautifulSoup``` libraries. In order to acquire the responses of each participant, we use the dataset on Kaggle.\n",
     "\n",
     "**Data Sources:**\n",
     "1. [OSMI 2016 Survey]()\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd6f8a91",
+   "id": "7904c46c",
    "metadata": {},
    "source": [
     "## 01 OSMI 2018 Survey"
@@ -32,8 +32,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
-   "id": "2a020212",
+   "execution_count": 411,
+   "id": "32f7bec4",
    "metadata": {
     "scrolled": false
    },
@@ -79,8 +79,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
-   "id": "c1f184c2",
+   "execution_count": 412,
+   "id": "8a4e8d3c",
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
       "Have you ever sought treatment for a mental health disorder from a mental health professional?\n",
       "Do you have a family history of mental illness?\n",
       "If you have a mental health disorder, how often do you feel that it interferes with your work when being treated effectively?\n",
-      "If you have a mental health disorder, how often do you feel that it interferes with your work when _NOT_ being treated effectively (i.e., when you are experiencing symptoms)?\n",
+      "If you have a mental health disorder, how often do you feel that it interferes with your work when NOT being treated effectively (i.e., when you are experiencing symptoms)?\n",
       "Have your observations of how another individual who discussed a mental health issue made you less likely to reveal a mental health issue yourself in your current workplace?\n",
       "How willing would you be to share with friends and family that you have a mental illness?\n",
       "Would you be willing to bring up a physical health issue with a potential employer in an interview?\n",
@@ -151,7 +151,7 @@
       "Have you observed or experienced an unsupportive or badly handled response to a mental health issue in your current or previous workplace?\n",
       "Have you observed or experienced supportive or well handled response to a mental health issue in your current or previous workplace?\n",
       "Overall, how well do you think the tech industry supports employees with mental health issues?\n",
-      "Would you be willing to talk to one of us more extensively about your experiences with mental health issues in the tech industry? (Note that all interview responses would be used _anonymously_ and only with your permission.)\n",
+      "Would you be willing to talk to one of us more extensively about your experiences with mental health issues in the tech industry? (Note that all interview responses would be used anonymously and only with your permission.)\n",
       "What country do you live in?\n",
       "What US state or territory do you live in?\n",
       "What is your race?\n",
@@ -180,15 +180,18 @@
     "print('-'*100)\n",
     "\n",
     "# Process each question to remove * present representing bolded words\n",
+    "question_titles = []\n",
     "for question in questions:\n",
     "    question['title'] = question['title'].replace('*', '')\n",
+    "    question['title'] = question['title'].replace('_', '')\n",
+    "    question_titles.append(question['title'])\n",
     "    print(question['title'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
-   "id": "59fc4c6f",
+   "execution_count": 413,
+   "id": "8f9a6b9a",
    "metadata": {
     "scrolled": true
    },
@@ -203,7 +206,7 @@
        "         'dropdown': 4})"
       ]
      },
-     "execution_count": 313,
+     "execution_count": 413,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,8 +221,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 314,
-   "id": "ba1601f2",
+   "execution_count": 414,
+   "id": "657e0908",
    "metadata": {
     "scrolled": true
    },
@@ -246,8 +249,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
-   "id": "9333e14d",
+   "execution_count": 415,
+   "id": "b3734db8",
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +328,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb73bb02",
+   "id": "f5b5693a",
    "metadata": {},
    "source": [
     "Since we look to aggregate columns from multiple datasets throughout the years, we merge the columns of descriptive questions to form a single column: `comments`. We also drop the first column representing the participant ID and a few other columns that are not relevant to our study."
@@ -333,8 +336,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
-   "id": "b55de2e0",
+   "execution_count": 416,
+   "id": "a401546d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +346,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c940bbf2",
+   "id": "1e83a858",
    "metadata": {},
    "source": [
     "The columns with indices between 50 to 62, 63 to 75 and 76 to 88 correspond to, respectively,\n",
@@ -359,8 +362,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
-   "id": "1f88460b",
+   "execution_count": 417,
+   "id": "a9d339e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,20 +405,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
-   "id": "93abb619",
+   "execution_count": 418,
+   "id": "0a96d461",
    "metadata": {},
    "outputs": [],
    "source": [
     "def merge_columns(df, new_col, col_list):\n",
     "    df[new_col] = df[col_list].apply(lambda x: ', '.join(x.dropna().astype(str)), 1)\n",
-    "    df[new_col] = df[new_col].apply(lambda aCode: np.nan if aCode == '' else aCode)"
+    "    df[new_col] = df[new_col].apply(lambda aCode: np.nan if aCode == '' else aCode)\n",
+    "    df.drop(col_list, axis=1, inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
-   "id": "c1176960",
+   "execution_count": 419,
+   "id": "1821c851",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,42 +431,164 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
-   "id": "c1d981f3",
+   "execution_count": 420,
+   "id": "8c4d2316",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Index(['<strong>Are you self-employed?</strong>',\n",
-       "       'How many employees does your company or organization have?',\n",
-       "       'Is your employer primarily a tech company/organization?',\n",
-       "       'Is your primary role within your company related to tech/IT?',\n",
-       "       'Does your employer provide mental health benefits as part of healthcare coverage?',\n",
-       "       'Do you know the options for mental health care available under your employer-provided health coverage?',\n",
-       "       'Has your employer ever formally discussed mental health (for example, as part of a wellness campaign or other official communication)?',\n",
-       "       'Does your employer offer resources to learn more about mental health disorders and options for seeking help?',\n",
-       "       'Is your anonymity protected if you choose to take advantage of mental health or substance abuse treatment resources provided by your employer?',\n",
-       "       'If a mental health issue prompted you to request a medical leave from work, how easy or difficult would it be to ask for that leave?',\n",
-       "       ...\n",
-       "       'What country do you <strong>live</strong> in?',\n",
-       "       'What US state or territory do you <strong>live</strong> in?',\n",
-       "       'What is your race?', 'Other.3',\n",
-       "       'What country do you <strong>work</strong> in?',\n",
-       "       'What US state or territory do you <strong>work</strong> in?',\n",
-       "       'What disorder(s) have you been diagnosed with?',\n",
-       "       'If possibly, what disorder(s) do you believe you have?',\n",
-       "       'If so, what disorder(s) were you diagnosed with?', 'comments'],\n",
-       "      dtype='object', length=123)"
-      ]
-     },
-     "execution_count": 320,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of columns: 73\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "Are you self-employed?\n",
+      "How many employees does your company or organization have?\n",
+      "Is your employer primarily a tech company/organization?\n",
+      "Is your primary role within your company related to tech/IT?\n",
+      "Does your employer provide mental health benefits as part of healthcare coverage?\n",
+      "Do you know the options for mental health care available under your employer-provided health coverage?\n",
+      "Has your employer ever formally discussed mental health (for example, as part of a wellness campaign or other official communication)?\n",
+      "Does your employer offer resources to learn more about mental health disorders and options for seeking help?\n",
+      "Is your anonymity protected if you choose to take advantage of mental health or substance abuse treatment resources provided by your employer?\n",
+      "If a mental health issue prompted you to request a medical leave from work, how easy or difficult would it be to ask for that leave?\n",
+      "Would you feel more comfortable talking to your coworkers about your physical health or your mental health?\n",
+      "Would you feel comfortable discussing a mental health issue with your direct supervisor(s)?\n",
+      "Have you ever discussed your mental health with your employer?\n",
+      "Would you feel comfortable discussing a mental health issue with your coworkers?\n",
+      "Have you ever discussed your mental health with coworkers?\n",
+      "Have you ever had a coworker discuss their or another coworker's mental health with you?\n",
+      "Overall, how much importance does your employer place on physical health?\n",
+      "Overall, how much importance does your employer place on mental health?\n",
+      "Do you have medical coverage (private insurance or state-provided) that includes treatment of mental health disorders?\n",
+      "Do you know local or online resources to seek help for a mental health issue?\n",
+      "If you have been diagnosed or treated for a mental health disorder, do you ever reveal this to clients or business contacts?\n",
+      "If you have revealed a mental health disorder to a client or business contact, how has this affected you or the relationship?\n",
+      "If you have been diagnosed or treated for a mental health disorder, do you ever reveal this to coworkers or employees?\n",
+      "If you have revealed a mental health disorder to a coworker or employee, how has this impacted you or the relationship?\n",
+      "Do you believe your productivity is ever affected by a mental health issue?\n",
+      "If yes, what percentage of your work time (time performing primary or secondary job functions) is affected by a mental health issue?\n",
+      "Do you have previous employers?\n",
+      "Was your employer primarily a tech company/organization?\n",
+      "Have your previous employers provided mental health benefits?\n",
+      "Were you aware of the options for mental health care provided by your previous employers?\n",
+      "Did your previous employers ever formally discuss mental health (as part of a wellness campaign or other official communication)?\n",
+      "Did your previous employers provide resources to learn more about mental health disorders and how to seek help?\n",
+      "Was your anonymity protected if you chose to take advantage of mental health or substance abuse treatment resources with previous employers?\n",
+      "Would you have felt more comfortable talking to your previous employer about your physical health or your mental health?\n",
+      "Would you have been willing to discuss your mental health with your direct supervisor(s)?\n",
+      "Did you ever discuss your mental health with your previous employer?\n",
+      "Would you have been willing to discuss your mental health with your coworkers at previous employers?\n",
+      "Did you ever discuss your mental health with a previous coworker(s)?\n",
+      "Did you ever have a previous coworker discuss their or another coworker's mental health with you?\n",
+      "Overall, how much importance did your previous employer place on physical health?\n",
+      "Overall, how much importance did your previous employer place on mental health?\n",
+      "Do you currently have a mental health disorder?\n",
+      "Have you ever been diagnosed with a mental health disorder?\n",
+      "Have you had a mental health disorder in the past?\n",
+      "Have you ever sought treatment for a mental health disorder from a mental health professional?\n",
+      "Do you have a family history of mental illness?\n",
+      "If you have a mental health disorder, how often do you feel that it interferes with your work when being treated effectively?\n",
+      "If you have a mental health disorder, how often do you feel that it interferes with your work when NOT being treated effectively (i.e., when you are experiencing symptoms)?\n",
+      "Have your observations of how another individual who discussed a mental health issue made you less likely to reveal a mental health issue yourself in your current workplace?\n",
+      "How willing would you be to share with friends and family that you have a mental illness?\n",
+      "Would you be willing to bring up a physical health issue with a potential employer in an interview?\n",
+      "Why or why not?\n",
+      "Would you bring up your mental health with a potential employer in an interview?\n",
+      "Why or why not?.1\n",
+      "Are you openly identified at work as a person with a mental health issue?\n",
+      "Has being identified as a person with a mental health issue affected your career?\n",
+      "How has it affected your career?\n",
+      "If they knew you suffered from a mental health disorder, how do you think that team members/co-workers would react?\n",
+      "Have you observed or experienced an unsupportive or badly handled response to a mental health issue in your current or previous workplace?\n",
+      "Have you observed or experienced supportive or well handled response to a mental health issue in your current or previous workplace?\n",
+      "Overall, how well do you think the tech industry supports employees with mental health issues?\n",
+      "Would you be willing to talk to one of us more extensively about your experiences with mental health issues in the tech industry? (Note that all interview responses would be used anonymously and only with your permission.)\n",
+      "What is your age?\n",
+      "What is your gender?\n",
+      "What country do you live in?\n",
+      "What US state or territory do you live in?\n",
+      "What is your race?\n",
+      "What country do you work in?\n",
+      "What US state or territory do you work in?\n",
+      "What disorder(s) have you been diagnosed with?\n",
+      "If possibly, what disorder(s) do you believe you have?\n",
+      "If so, what disorder(s) were you diagnosed with?\n",
+      "comments\n"
+     ]
     }
    ],
    "source": [
-    "data_2018.columns"
+    "print(\"Number of columns:\", len(data_2018.columns))\n",
+    "print('-'*100)\n",
+    "for i in range(len(data_2018.columns)):\n",
+    "    for string in ['<strong>', '</strong>', '<em>', '</em>']:\n",
+    "        data_2018.rename(columns = {data_2018.columns[i]:data_2018.columns[i].replace(string, '')}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aa498cb2",
+   "metadata": {},
+   "source": [
+    "### Cleaned Kaggle Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "adfcd88f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('Final cleaned Kaggle dataset:')\n",
+    "for i in data_2018.columns:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 422,
+   "id": "0e78b2b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Why or why not?', 'Why or why not?.1', 'What is your age?', 'What is your gender?', 'comments']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Analyze the attributes that are present in the Kaggle dataset and not in the scraped dataset\n",
+    "print([i for i in data_2018.columns if i not in question_titles])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e67cd301",
+   "metadata": {},
+   "source": [
+    "The attributes age, gender and comments are important for the final aggregation, and so we retain them as is. We do not need the explanatory questions, and so they are dropped."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 423,
+   "id": "2da206bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (1907645675.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipykernel_8098/1907645675.py\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    df.drop([['Why or why not?', 'Why or why not?.1'], axis=1, inplace=True)\u001b[0m\n\u001b[0m                                                           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.drop([['Why or why not?', 'Why or why not?.1'], axis=1, inplace=True)"
    ]
   }
  ],
