--- a/DatasetCleaning_WebScraping.ipynb
+++ b/DatasetCleaning_WebScraping.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17dcfcb6",
+   "id": "9b9fee45",
    "metadata": {},
    "source": [
     "# 01 Work on the 2018 Dataset"
@@ -652,7 +652,7 @@
   {
    "cell_type": "code",
    "execution_count": 265,
-   "id": "517e0bff",
+   "id": "5f68a640",
    "metadata": {},
    "outputs": [
     {
@@ -679,7 +679,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dfebaafa",
+   "id": "d80e4199",
    "metadata": {},
    "source": [
     "As observed, the last three columns in the cleaned Kaggle dataset are not present on the survey webpage."
@@ -688,7 +688,7 @@
   {
    "cell_type": "code",
    "execution_count": 266,
-   "id": "73812c51",
+   "id": "ae8c2d8f",
    "metadata": {
     "scrolled": false
    },
@@ -998,7 +998,7 @@
   {
    "cell_type": "code",
    "execution_count": 267,
-   "id": "67d25276",
+   "id": "9bc05642",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1007,7 +1007,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c635ae66",
+   "id": "abf504ff",
    "metadata": {},
    "source": [
     "# 02 Work on the 2020 Dataset"
@@ -1015,7 +1015,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7cd7b2a8",
+   "id": "98ee5101",
    "metadata": {},
    "source": [
     "## 1. Acquistion of Survey Questions with Web Scraping"
@@ -1024,7 +1024,7 @@
   {
    "cell_type": "code",
    "execution_count": 268,
-   "id": "1362a71e",
+   "id": "5d14f58c",
    "metadata": {},
    "outputs": [
     {
@@ -1059,7 +1059,7 @@
   {
    "cell_type": "code",
    "execution_count": 269,
-   "id": "e330bcd5",
+   "id": "2bba2ff3",
    "metadata": {
     "scrolled": true
    },
@@ -1172,7 +1172,7 @@
   {
    "cell_type": "code",
    "execution_count": 270,
-   "id": "d7a1cadc",
+   "id": "8e1c96f2",
    "metadata": {},
    "outputs": [
     {
@@ -1201,7 +1201,7 @@
   {
    "cell_type": "code",
    "execution_count": 271,
-   "id": "26d6c91a",
+   "id": "5c682304",
    "metadata": {},
    "outputs": [
     {
@@ -1226,7 +1226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c63c2a51",
+   "id": "79a698f5",
    "metadata": {},
    "source": [
     "## 2. Cleaning and Aggregating Columns on the Dataset from Kaggle"
@@ -1243,7 +1243,7 @@
   {
    "cell_type": "code",
    "execution_count": 272,
-   "id": "70645b44",
+   "id": "a386b04b",
    "metadata": {
     "scrolled": true
    },
@@ -1380,7 +1380,7 @@
   {
    "cell_type": "code",
    "execution_count": 275,
-   "id": "0b00927f",
+   "id": "2df4690a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1434,7 +1434,7 @@
   {
    "cell_type": "code",
    "execution_count": 278,
-   "id": "29dd0385",
+   "id": "0460705a",
    "metadata": {},
    "outputs": [
     {
@@ -1571,7 +1571,7 @@
   {
    "cell_type": "code",
    "execution_count": 281,
-   "id": "01501000",
+   "id": "1e0bcdad",
    "metadata": {
     "scrolled": true
    },
@@ -1600,7 +1600,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0aa00bdf",
+   "id": "dec72717",
    "metadata": {},
    "source": [
     "As observed, the last three columns in the cleaned Kaggle dataset are not present on the survey webpage."
@@ -1609,7 +1609,7 @@
   {
    "cell_type": "code",
    "execution_count": 282,
-   "id": "491c4a7b",
+   "id": "2754d9a1",
    "metadata": {
     "scrolled": true
    },
@@ -1632,31 +1632,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
-   "id": "ae7adc7f",
+   "execution_count": 285,
+   "id": "2fc1a89a",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (2679960909.py, line 5)",
+     "ename": "TypeError",
+     "evalue": "rename() got an unexpected keyword argument 'columns'",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipykernel_22105/2679960909.py\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    data_2020.columns[i].replace(string, '')}, inplace=True)\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_22105/1120360712.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m data_2020.columns.rename(columns = {\n\u001b[0m\u001b[1;32m      2\u001b[0m     \u001b[0;34m'Have you observed or experienced a supportive or well handled response to a mental health issue in your current or previous workplace?'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0;34m:\u001b[0m\u001b[0;34m'Have you observed or experienced supportive or well handled response to a mental health issue in your current or previous workplace?'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;34m'If they knew you suffered from a mental health disorder, how do you think that your team members/co-workers would react?'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     'If they knew you suffered from a mental health disorder, how do you think that team members/co-workers would react?'}, inplace=True)\n",
+      "\u001b[0;31mTypeError\u001b[0m: rename() got an unexpected keyword argument 'columns'"
      ]
     }
    ],
    "source": [
-    "data_2020.columns,rename(columns = {\n",
+    "data_2020.columns.rename(columns = {\n",
     "    'Have you observed or experienced a supportive or well handled response to a mental health issue in your current or previous workplace?'\n",
     "    :'Have you observed or experienced supportive or well handled response to a mental health issue in your current or previous workplace?',\n",
-    "    ''\n",
-    "    data_2020.columns[i].replace(string, '')}, inplace=True)"
+    "    'If they knew you suffered from a mental health disorder, how do you think that your team members/co-workers would react?':\n",
+    "    'If they knew you suffered from a mental health disorder, how do you think that team members/co-workers would react?'}, inplace=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3e3a764",
+   "id": "46fd84c6",
    "metadata": {
     "scrolled": true
    },
@@ -1668,7 +1671,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2934c372",
+   "id": "c85590cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1678,7 +1681,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3ec081c",
+   "id": "3bba1065",
    "metadata": {},
    "outputs": [],
    "source": []
