--- a/DatasetCleaning_WebScraping.ipynb
+++ b/DatasetCleaning_WebScraping.ipynb
@@ -1334,7 +1334,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c1b0017",
+   "id": "692a2fad",
    "metadata": {},
    "source": [
     "### Column Name Cleaning"
@@ -1994,17 +1994,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb77e061",
+   "id": "98ec5c93",
    "metadata": {},
    "source": [
-    "# 03 Work on the 2019 Dataset\n",
-    "##"
+    "# 03 Work on the 2019 Dataset"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "339f324e",
+   "id": "d2e80b1f",
    "metadata": {
     "scrolled": true
    },
@@ -2044,7 +2043,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "5fb31a1e",
+   "id": "e51c0df7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2065,7 +2064,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "91c56332",
+   "id": "f0ed81bc",
    "metadata": {},
    "outputs": [
     {
@@ -2086,7 +2085,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "0de62f63",
+   "id": "26d34dae",
    "metadata": {},
    "outputs": [
     {
@@ -2105,7 +2104,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "ac72705d",
+   "id": "8f996945",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2116,7 +2115,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "e4fc30cd",
+   "id": "00d13760",
    "metadata": {
     "scrolled": true
    },
@@ -2207,7 +2206,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "1d7318c8",
+   "id": "41cb6406",
    "metadata": {},
    "outputs": [
     {
@@ -2230,6 +2229,58 @@
     "print(\"Questions on the 2019 dataset and not on the 2018 one:\")\n",
     "print(*[(str(count) + '. ' + str(i)) for count, i in enumerate(data_2019.columns) \n",
     "        if i not in data_2018.columns], sep='\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "016ba453",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_2019.rename(columns = {\n",
+    "    'Have you observed or experienced a supportive or well handled response to a mental health issue in your current or previous workplace?'\n",
+    "    :'Have you observed or experienced supportive or well handled response to a mental health issue in your current or previous workplace?',\n",
+    "    'If they knew you suffered from a mental health disorder, how do you think that your team members/co-workers would react?':\n",
+    "    'If they knew you suffered from a mental health disorder, how do you think that team members/co-workers would react?'}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "7d712aae",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Questions on the 2018 dataset and not on the 2019 one:\n",
+      "\n",
+      "Questions on the 2019 dataset and not on the 2018 one:\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Questions on the 2018 dataset and not on the 2019 one:\")\n",
+    "print(*[(str(count) + '. ' + str(i)) for count, i in enumerate(data_2018.columns) \n",
+    "        if i not in data_2019.columns], sep='\\n')\n",
+    "print(\"Questions on the 2019 dataset and not on the 2018 one:\")\n",
+    "print(*[(str(count) + '. ' + str(i)) for count, i in enumerate(data_2019.columns) \n",
+    "        if i not in data_2018.columns], sep='\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "1e8cf6e4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_2019.to_csv('datasets/2019_data.csv')"
    ]
   }
  ],
