Data Preprocessing and ML models

--- a/Data Preprocessing And Training/Mental_health_In_Tech_2014_Survey_ipynb_txt.ipynb
+++ b/Data Preprocessing And Training/Mental_health_In_Tech_2014_Survey_ipynb_txt.ipynb
@@ -2415,7 +2415,7 @@
         "id": "ehFoZ0nJ8qmZ"
       },
       "source": [
-        "Since a lot of the entries in `work_interfere` is Nan we have introduced a new tern **Not sure** and replace all the NaN with **Not sure**"
+        "Since a lot of the entries in `work_interfere` is Nan we have introduced a new term **Not sure** and replace all the NaN with **Not sure**"
       ]
     },
     {
@@ -3079,17 +3079,6 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "fBSrD5Jd-DLK"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 120,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "qdhChOo0DkJz"
@@ -3374,9 +3363,7 @@
         "id": "w0E4ol3Q-C_5"
       },
       "source": [
-        "mh_tuning = mh.copy()\n",
-        "mh_tuning.drop(columns = ['Age', 'Remote_Work', 'Wellness_Program', 'Physical_Health_Consequence'], inplace = True)\n",
-        "mh_tuning.head()"
+        ""
       ],
       "execution_count": null,
       "outputs": []
