--- a/model-building-and-final-results/models.ipynb
+++ b/model-building-and-final-results/models.ipynb
@@ -13,6 +13,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
+    "collapsed": true,
     "id": "Sfevo59uEUyE"
    },
    "outputs": [
@@ -115,8 +116,7 @@
      "height": 974
     },
     "id": "mpIhRsW7Esy9",
-    "outputId": "6381d15e-9d28-46b9-ec3c-85571b29468d",
-    "scrolled": false
+    "outputId": "6381d15e-9d28-46b9-ec3c-85571b29468d"
    },
    "outputs": [
     {
@@ -486,8 +486,31 @@
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
-    "X_train, X_test, y1_train, y1_test = train_test_split(X, Y1, test_size = 0.2, random_state = 25)\n",
-    "X_train, X_test, y2_train, y2_test = train_test_split(X, Y2, test_size = 0.2, random_state = 25)"
+    "X_train_1, X_test_1, y1_train, y1_test = train_test_split(X, Y1, test_size = 0.2, random_state = 25)\n",
+    "X_train_2, X_test_2, y2_train, y2_test = train_test_split(X, Y2, test_size = 0.2, random_state = 25)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1    75\n",
+       "2    56\n",
+       "0    53\n",
+       "Name: Would you feel comfortable discussing a mental health issue with your direct supervisor(s)?, dtype: int64"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y2_test.value_counts()"
    ]
   },
   {
@@ -534,11 +557,11 @@
    ],
    "source": [
     "pipe1 = make_pipeline(StandardScaler(), LogisticRegression())\n",
-    "pipe1.fit(X_train, y1_train)  \n",
-    "print('Score for y1:',pipe1.score(X_test, y1_test))\n",
+    "pipe1.fit(X_train_1, y1_train)  \n",
+    "print('Score for y1:',pipe1.score(X_test_1, y1_test))\n",
     "print('Cross validation score for logistic regression to classify y1:',cross_val_score(pipe1, X, Y1, cv=10))\n",
-    "pipe1.fit(X_train, y2_train) \n",
-    "print('Score for y2:',pipe1.score(X_test, y2_test))\n",
+    "pipe1.fit(X_train_2, y2_train) \n",
+    "print('Score for y2:',pipe1.score(X_test_2, y2_test))\n",
     "print('Cross validation score for logistic regression to classify y2:',cross_val_score(pipe1, X, Y2, cv=10))"
    ]
   },
@@ -575,11 +598,11 @@
    ],
    "source": [
     "pipe2 = make_pipeline(StandardScaler(), SVC(kernel = 'linear'))\n",
-    "pipe2.fit(X_train, y1_train)  \n",
-    "print('Score for y1:',pipe2.score(X_test, y1_test))\n",
+    "pipe2.fit(X_train_1, y1_train)  \n",
+    "print('Score for y1:',pipe2.score(X_test_1, y1_test))\n",
     "print('Cross validation score for SVM to classify y1:',cross_val_score(pipe2, X, Y1, cv=10))\n",
-    "pipe2.fit(X_train, y2_train) \n",
-    "print('Score for y2:',pipe2.score(X_test, y2_test))\n",
+    "pipe2.fit(X_train_2, y2_train) \n",
+    "print('Score for y2:',pipe2.score(X_test_2, y2_test))\n",
     "print('Cross validation score for SVM to classify y2:',cross_val_score(pipe2, X, Y2, cv=10))\n"
    ]
   },
@@ -618,11 +641,11 @@
    ],
    "source": [
     "pipe3 = make_pipeline(StandardScaler(),KNeighborsClassifier(n_neighbors=3))\n",
-    "pipe3.fit(X_train, y1_train)  \n",
-    "print('Score for y1:',pipe3.score(X_test, y1_test))\n",
+    "pipe3.fit(X_train_1, y1_train)  \n",
+    "print('Score for y1:',pipe3.score(X_test_1, y1_test))\n",
     "print('Cross validation score for KNN to classify y1:',cross_val_score(pipe3, X, Y1, cv=10))\n",
-    "pipe3.fit(X_train, y2_train) \n",
-    "print('Score for y2:',pipe3.score(X_test, y2_test))\n",
+    "pipe3.fit(X_train_2, y2_train) \n",
+    "print('Score for y2:',pipe3.score(X_test_2, y2_test))\n",
     "print('Cross validation score for KNN to classify y2:',cross_val_score(pipe3, X, Y2, cv=10))"
    ]
   },
@@ -659,11 +682,11 @@
    ],
    "source": [
     "pipe4 = make_pipeline(StandardScaler(),DecisionTreeClassifier(random_state=10))\n",
-    "pipe4.fit(X_train, y1_train)  \n",
-    "print('Score for y1:',pipe4.score(X_test, y1_test))\n",
+    "pipe4.fit(X_train_1, y1_train)  \n",
+    "print('Score for y1:',pipe4.score(X_test_1, y1_test))\n",
     "print('Cross validation score for Decision Tree to classify y1:',cross_val_score(pipe4, X, Y1, cv=10))\n",
-    "pipe4.fit(X_train, y2_train) \n",
-    "print('Score for y2:',pipe4.score(X_test, y2_test))\n",
+    "pipe4.fit(X_train_2, y2_train) \n",
+    "print('Score for y2:',pipe4.score(X_test_2, y2_test))\n",
     "print('Cross validation score for Decision Tree to classify y2:',cross_val_score(pipe4, X, Y2, cv=10))"
    ]
   },
@@ -702,11 +725,11 @@
    ],
    "source": [
     "pipe5 = make_pipeline(StandardScaler(),RandomForestClassifier(max_depth=6,random_state=10))\n",
-    "pipe5.fit(X_train, y1_train)  \n",
-    "print('Score for y1:',pipe5.score(X_test, y1_test))\n",
+    "pipe5.fit(X_train_1, y1_train)  \n",
+    "print('Score for y1:',pipe5.score(X_test_1, y1_test))\n",
     "print('Cross validation score for Random Forest classifier to classify y1:',cross_val_score(pipe5, X, Y1, cv=10))\n",
-    "pipe5.fit(X_train, y2_train) \n",
-    "print('Score for y2:',pipe5.score(X_test, y2_test))\n",
+    "pipe5.fit(X_train_2, y2_train) \n",
+    "print('Score for y2:',pipe5.score(X_test_2, y2_test))\n",
     "print('Cross validation score for Random Forest  Classifier to classify y2:',cross_val_score(pipe5, X, Y2, cv=10))"
    ]
   },
@@ -745,11 +768,11 @@
     "parameters = {'kernel':('linear', 'rbf'), 'C':[1, 10]}\n",
     "svc = SVC()\n",
     "pipe6 = make_pipeline(StandardScaler(),GridSearchCV(svc, parameters))\n",
-    "pipe6.fit(X_train, y1_train)  \n",
-    "print('Score for y1:',pipe6.score(X_test, y1_test))\n",
+    "pipe6.fit(X_train_1, y1_train)  \n",
+    "print('Score for y1:',pipe6.score(X_test_1, y1_test))\n",
     "print('Cross validation score for Grid Search to classify y1:',cross_val_score(pipe6, X, Y1, cv=10))\n",
-    "pipe6.fit(X_train, y2_train) \n",
-    "print('Score for y2:',pipe6.score(X_test, y2_test))\n",
+    "pipe6.fit(X_train_2, y2_train) \n",
+    "print('Score for y2:',pipe6.score(X_test_2, y2_test))\n",
     "print('Cross validation score for Grid Search to classify y2:',cross_val_score(pipe6, X, Y2, cv=10))"
    ]
   },
@@ -769,37 +792,6 @@
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
-    "id": "fn3BDQfbIEw5",
-    "outputId": "f9691107-9edb-4280-e79c-2eaea4365cf8"
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'from sklearn.model_selection import train_test_split\\nX_train, X_test, y1_train, y1_test = train_test_split(X, Y1, test_size = 0.2, random_state = 25)\\nX_train, X_test, y2_train, y2_test = train_test_split(X, Y2, test_size = 0.2, random_state = 25)\\nclf = BaggingClassifier(base_estimator=SVC(),n_estimators=10, random_state=0).fit(X_train, y1_train)\\nclf.score(X_test,y1_test)\\n'"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "'''from sklearn.model_selection import train_test_split\n",
-    "X_train, X_test, y1_train, y1_test = train_test_split(X, Y1, test_size = 0.2, random_state = 25)\n",
-    "X_train, X_test, y2_train, y2_test = train_test_split(X, Y2, test_size = 0.2, random_state = 25)\n",
-    "clf = BaggingClassifier(base_estimator=SVC(),n_estimators=10, random_state=0).fit(X_train, y1_train)\n",
-    "clf.score(X_test,y1_test)\n",
-    "'''"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
     "id": "C05cQGjUvWt9",
     "outputId": "4ad22d57-9eb8-4ef1-ff85-0de27dfc157e"
    },
@@ -808,22 +800,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Score for y1: 0.9510869565217391\n",
-      "Cross validation score for Bagging Classifier to classify y1: [0.94623656 0.94623656 0.97849462 1.         1.         0.98901099\n",
-      " 0.98901099 1.         1.         0.95604396]\n",
-      "Score for y2: 0.967391304347826\n",
-      "Cross validation score for Bagging Classifier to classify y2: [0.97849462 0.98924731 0.97849462 0.97826087 0.9673913  1.\n",
-      " 0.97802198 0.97802198 0.96703297 0.95604396]\n"
+      "Score for y1: 0.9456521739130435\n",
+      "Cross validation score for Bagging Classifier to classify y1: [0.97849462 0.93548387 0.95698925 1.         1.         0.97802198\n",
+      " 0.98901099 1.         0.97802198 0.93406593]\n",
+      "Score for y2: 0.9836956521739131\n",
+      "Cross validation score for Bagging Classifier to classify y2: [0.97849462 0.98924731 0.96774194 0.98913043 0.94565217 0.97826087\n",
+      " 0.98901099 0.98901099 0.97802198 0.94505495]\n"
      ]
     }
    ],
    "source": [
     "pipe7 = make_pipeline(StandardScaler(),BaggingClassifier(base_estimator=SVC(),n_estimators=4))\n",
-    "pipe7.fit(X_train, y1_train)  \n",
-    "print('Score for y1:',pipe7.score(X_test, y1_test))\n",
+    "pipe7.fit(X_train_1, y1_train)  \n",
+    "print('Score for y1:',pipe7.score(X_test_1, y1_test))\n",
     "print('Cross validation score for Bagging Classifier to classify y1:',cross_val_score(pipe7, X, Y1, cv=10))\n",
-    "pipe7.fit(X_train, y2_train) \n",
-    "print('Score for y2:',pipe7.score(X_test, y2_test))\n",
+    "pipe7.fit(X_train_2, y2_train) \n",
+    "print('Score for y2:',pipe7.score(X_test_2, y2_test))\n",
     "print('Cross validation score for Bagging Classifier to classify y2:',cross_val_score(pipe7, X, Y2, cv=10))"
    ]
   },
@@ -838,35 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "THkhl9mC1FjR",
-    "outputId": "c5c34a11-0b6c-4dd8-ee86-41ce88abb81e"
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.0"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "clf = AdaBoostClassifier(n_estimators=100, random_state=0)\n",
-    "clf.fit(X_train, y1_train)\n",
-    "clf.score(X_test,y1_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -888,11 +852,11 @@
    ],
    "source": [
     "pipe8 = make_pipeline(StandardScaler(),AdaBoostClassifier(n_estimators=150, random_state=0))\n",
-    "pipe8.fit(X_train, y1_train)  \n",
-    "print('Score for y1:',pipe8.score(X_test, y1_test))\n",
+    "pipe8.fit(X_train_1, y1_train)  \n",
+    "print('Score for y1:',pipe8.score(X_test_1, y1_test))\n",
     "print('Cross validation score for AdaBoost classifier to classify y1:',cross_val_score(pipe8, X, Y1, cv=10))\n",
-    "pipe8.fit(X_train, y2_train) \n",
-    "print('Score for y2:',pipe8.score(X_test, y2_test))\n",
+    "pipe8.fit(X_train_2, y2_train) \n",
+    "print('Score for y2:',pipe8.score(X_test_2, y2_test))\n",
     "print('Cross validation score for AdaBoost classifier to classify y2:',cross_val_score(pipe8, X, Y2, cv=10))"
    ]
   }
